--- a/config.yml
+++ b/config.yml
@@ -45,13 +45,13 @@ params:
       Du fait de l’exil et de la guerre, chacun ne possède que quelques fragments de l’histoire de sa famille.
 
 
-      Le projet \#FRAGMENTS KH50 veut rassembler ces fragments d’histoires personnelles pour reconstituer la Mémoire collective
+      __Le projet \#FRAGMENTS KH50 veut rassembler ces fragments d’histoires personnelles pour reconstituer la Mémoire collective__
     imageUrl: "/images/fragment-rond.svg"
     imageTitle: logo fragments
     imageWidth: 300
     imageHeight: 300
     buttons:
-      - name: Contribuer au project sur HelloAsso
+      - name: Contribuer au projet sur HelloAsso ❤️
         url: https://www.helloasso.com/
 
   socialIcons:
