--- a/config.yml
+++ b/config.yml
@@ -74,6 +74,8 @@ params:
     apple_touch_icon: "/images/apple-touch-icon.png"
     safari_pinned_tab: "/images/apple-touch-icon.png"
 
+copyright: © 2023 FragmentisVitaeAsia
+
 enableInlineShortcodes: true
 enableRobotsTXT: true
 enableEmoji: true
