--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,12 @@
-baseURL: # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
+baseURL: https://www.fragmentis-vitae.org/ # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
 title: Fragments#KH50
 paginate: 5
 theme: charlolamode
 
 menu:
   main:
-    - name: Description
-      url: /description/
+    - name: Présentation
+      url: /presentation/
     - name: Les porteurs du projet
       url: /porteurs-projet/
     - name: Ils nous soutiennent
