feat: reorder links in header

--- a/config.yml
+++ b/config.yml
@@ -7,10 +7,13 @@ menu:
   main:
     - name: Présentation
       url: /presentation/
+      weight: 10
     - name: Les porteurs du projet
       url: /porteurs-projet/
+      weight: 20
     - name: Ils nous soutiennent
       url: /soutiens/
+      weight: 30
 
 # - name: Contact
 #   url: /contact/
