feat: add "En savoir plus" button

--- a/config.yml
+++ b/config.yml
@@ -52,7 +52,10 @@ params:
       Du fait de l’exil et de la guerre, chacun ne possède que quelques fragments de l’histoire de sa famille.
 
 
-      __Le projet \#FRAGMENTS KH50 veut rassembler ces fragments d’histoires personnelles pour reconstituer la Mémoire collective__
+      **Le projet \#FRAGMENTS KH50 veut rassembler ces fragments d’histoires personnelles pour reconstituer la Mémoire collective**
+
+      [> _En savoir plus_](/presentation/)
+
     imageUrl: "/images/fragment-rond.svg"
     imageTitle: logo fragments
     imageWidth: 300
