--- a/config.yml
+++ b/config.yml
@@ -14,6 +14,9 @@ menu:
     - name: Ils nous soutiennent
       url: /soutiens/
       weight: 30
+    - name: Contact
+      url: /contact/
+      weight: 40
 
 # - name: Contact
 #   url: /contact/
