feat: fix typo on name

--- a/data/founders.yaml
+++ b/data/founders.yaml
@@ -1,5 +1,5 @@
 founders:
-  - fullname: "Sunlay Tan"
+  - fullname: "Sun-Lay Tan"
     bio: "Journaliste et militant associatif, Sun-Lay Tan est né de parents cambodgiens. Depuis 2016, il milite contre les discriminations faites aux Asiatiques de France au sein d’un collectif dont il a été le porte-parole. Il est **l’initiateur du projet Fragments #KH50** et **Président-fondateur de l’association Fragmentis Vitae Asia.**"
     picture: "/images/founders/sunlay_tan.jpeg"
   - fullname: "Frédéric Dabi"
