--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -23,7 +23,7 @@ personnalities:
     list:
       - "**Aurélia Alessandra**, _principale du collège Jacques-Yves Cousteau de Bussy-Saint-Georges_"
       - "**Chouvary Khun**, _pharmacienne_"
-      - "**Hak Ngy** _Khun, pharmacien_"
+      - "**Hak Ngy Khun**, _pharmacien_"
 
   - section3:
     list:
