--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -1,4 +1,4 @@
-personnalities:
+pPersonnalities:
   - section1:
     list:
       - "**Frédéric Dabi**, _directeur-général de l’institut de sondage IFOP_"
