--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -28,6 +28,7 @@ personnalities:
   - section3:
     list:
       - "**Jonathan Eap**, _comédien_"
+      - "**Nguyen Tay**, _artiste-peintre_"
       - "**Diana Chao**, _cheffe de Cuisine, créatrice de la chaîne YouTube Chez Mama Ly_"
       - "**Catherine Ngo**, _autrice_"
       - "**Linda Nguon**, _créatrice de Banh Mi Média_"
