--- a/config.yml
+++ b/config.yml
@@ -37,7 +37,12 @@ menu:
 
 params:
   author: loiklak
-  description: "Le projet FRAGMENTS #KH50 vise à réunir les fragments de l’histoire du peuple khmer, exilé de la guerre et du génocide au Cambodge, à l’occasion du cinquantenaire de la prise de Phnom Penh en 2025."
+  description: "Le projet Fragments #KH50 est principalement initié par des descendants de Cambodgiens et porté par l’association Loi 1901, Fragmentis Vitae Asia. 
+
+Du fait de l’exil, de la guerre civile et de la période génocidaire, chacun ne possède que quelques fragments de l’histoire de sa famille.
+
+FRAGMENTS #KH50 a pour objectif de rassembler ces fragments d’histoires pour reconstituer la Mémoire collective."
+
 
   defaultTheme: auto
   # disableThemeToggle: true
