--- a/config.yml
+++ b/config.yml
@@ -55,9 +55,12 @@ FRAGMENTS #KH50 a pour objectif de rassembler ces fragments d’histoires pour r
     enabled: true
     title: Fragments#KH50
     description:
-      "Fragments #KH50 a été principalement initié par des descendants de Cambodgiens. Du fait de l’exil et de la guerre, chacun ne possède que quelques fragments de l’histoire de sa famille.\n
+      "Le projet Fragments #KH50 est principalement initié par des descendants de Cambodgiens et porté par l’association Loi 1901, Fragmentis Vitae Asia. 
+Du fait de l’exil, de la guerre civile et de la période génocidaire, chacun ne possède que quelques fragments de l’histoire de sa famille.\n
 
-      **Le projet #FRAGMENTS KH50 souhaite rassembler ces fragments d’histoires personnelles pour reconstituer la Mémoire collective.**\n
+
+
+      **FRAGMENTS #KH50 a pour objectif de rassembler ces fragments d’histoires pour reconstituer la Mémoire collective.**\n
       "
 
     imageUrl: "/images/fragment-rond.svg"
