--- a/data/founders.yaml
+++ b/data/founders.yaml
@@ -3,17 +3,17 @@ founders:
     bio: "Journaliste et militant associatif, Sun-Lay Tan est né de parents cambodgiens. Depuis 2016, il milite contre les discriminations faites aux Asiatiques de France au sein d’un collectif dont il a été le porte-parole. Il est **l’initiateur du projet Fragments #KH50** et **Président-fondateur de l’association Fragmentis Vitae Asia.**"
     picture: "/images/founders/sunlay_tan.jpeg"
   - fullname: "Frédéric Dabi"
-    bio: "Directeur-général de l’institut de sondage _IFOP_, Frédéric est un amoureux de la culture cambodgienne. Il en fait la promotion en particulier à travers l’association du _Ballet Classique Khmer_ (BCK). **Il est l’interlocuteur principal des institutions publiques et politiques pour le projet Fragments.**"
+    bio: "Directeur-général de l’institut de sondage _IFOP_, Frédéric Dabi est un amoureux de la culture cambodgienne. Il en fait la promotion en particulier à travers l’association du _Ballet Classique Khmer_ (BCK). **Il est l’interlocuteur principal des institutions publiques et politiques pour le projet Fragments.**"
     picture: "/images/founders/frederic_dabi.jpeg"
   - fullname: "Matthieu Lim"
-    bio: "Entrepreneur d’origine sino-cambodgienne, né en France, il est **coordinateur du projet Fragments** et veille au bon déroulement des missions des protagonistes impliqués dans le projet, grâce à son expérience professionnelle et son héritage multiculturel."
+    bio: "Entrepreneur d’origine sino-cambodgienne, né en France, Matthieu Lim est **coordinateur du projet Fragments** et veille au bon déroulement des missions des protagonistes impliqués dans le projet, grâce à son expérience professionnelle et son héritage multiculturel."
     picture: "/images/founders/matthieu_lim.jpeg"
   - fullname: "Sébastien Kong"
-    bio: "Producteur et réalisateur d'origine sino-cambodgienne, Sébastien s’investit et se consacre depuis 2020 à des contenus qui traitent de la communauté asiatique en France sous tous ses aspects. Déjà engagé pour la diversité et l’inclusion dans le cinéma ; **Fragments #KH50** s’inscrit comme une évidence, pour partager l’héritage de ses origines."
+    bio: "Producteur et réalisateur d'origine sino-cambodgienne, Sébastien Kong s’investit et se consacre depuis 2020 à des contenus qui traitent de la communauté asiatique en France sous tous ses aspects. Déjà engagé pour la diversité et l’inclusion dans le cinéma ; **Fragments #KH50** s’inscrit comme une évidence, pour partager l’héritage de ses origines."
     picture: "/images/founders/sebastien_kong.jpeg"
   - fullname: "Virak Thun"
-    bio: "Scénariste (nominé _César 2022_) et réalisateur d’origine khmer, né dans un camp de réfugié à Surin. Il intègre naturellement le projet Fragments pour transmettre et partager une partie de son histoire, car la transmission et la libération de la parole sont des thèmes qui lui sont essentiels."
+    bio: "Scénariste (nominé _César 2022_) et réalisateur d’origine khmer, né dans un camp de réfugié à Surin (Thaïlande), Virak Thun intègre naturellement le projet Fragments pour transmettre et partager une partie de son histoire, car la transmission et la libération de la parole sont des thèmes qui lui sont essentiels."
     picture: "/images/founders/virak_thun.jpeg"
   - fullname: "Lydie Kao"
-    bio: "Conseillère funéraire dans la petite entreprise familiale que son père a créée en 2005, Lydie aide les futures générations à comprendre les rituels funéraires aux ancêtres à travers les  traditions qui y sont rattachées.<br>Elle sera un des acteurs liés à la création du monument."
+    bio: "Conseillère funéraire dans la petite entreprise familiale que son père a créée en 2005, Lydie Kao aide les futures générations à comprendre les rituels funéraires aux ancêtres à travers les  traditions qui y sont rattachées.<br>Elle sera un des acteurs liés à la création du monument."
     picture: "/images/founders/lydie_kao.jpeg"
