--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -18,12 +18,17 @@ personnalities:
     list:
       - "**Valéry Vuong**, _vice-président du Conseil représentatif des associations asiatiques de France (Craaf)_"
       - "**Thomas Cai**, _président de l’AJCF, association des jeunes Chinois de France_"
+      - "**Simeng Wang**, _sociologue, chargée de recherche au CNRS et coordinatrice du réseau de recherche Migration asiatique en France_"
+      
 
   - section3:
     list:
       - "**Aurélia Alessandra**, _principale du collège Jacques-Yves Cousteau de Bussy-Saint-Georges_"
       - "**Chouvary Khun**, _pharmacienne_"
       - "**Hak Ngy Khun**, _pharmacien_"
+      - "**Simeng Wang**, _sociologue, chargée de recherche au CNRS et coordinatrice du réseau de recherche Migration asiatique en France_"
+      - "**Kai Yan Ly**, _membre du réseau de recherche Migration asiatique en France_"
+      - "**Emmanuel Santarromana**, _membre du réseau de recherche Migration asiatique en France_"
 
   - section3:
     list:
