feat: add témoigner button

--- a/config.yml
+++ b/config.yml
@@ -75,6 +75,8 @@ Du fait de l’exil, de la guerre civile et de la période génocidaire, chacun 
         url: https://www.helloasso.com/associations/fragmentis-vitae/adhesions/adhesion
       - name: Faire un don ❤️
         url: https://www.helloasso.com/associations/fragmentis-vitae/formulaires/1
+      - name: Témoigner 🗣️
+        url: /temoignages/
 
   socialIcons:
     - name: linkedin
