--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -12,6 +12,7 @@ personnalities:
       - "**Michel Gérès**, _maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Sithal Tieng**, _premier adjoint au maire de Noisiel (Seine-et-Marne)_"
+      - "**Rui Wang**, _Conseiller municipal de Pantin (Seine-Saint-Denis)_"
       - "**Daniel Tran**, _Conseiller d’arrondissement Paris 13e_"
 
   - section2:
