--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -12,8 +12,8 @@ personnalities:
       - "**Michel Gérès**, _maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Sithal Tieng**, _premier adjoint au maire de Noisiel (Seine-et-Marne)_"
-      - "**Rui Wang**, _Conseiller municipal de Pantin (Seine-Saint-Denis)_"
-      - "**Daniel Tran**, _Conseiller d’arrondissement Paris 13e_"
+      - "**Rui Wang**, _conseiller municipal de Pantin (Seine-Saint-Denis)_"
+      - "**Daniel Tran**, _conseiller d’arrondissement Paris 13e_"
 
   - section2:
     list:
@@ -27,7 +27,7 @@ personnalities:
       - "**Aurélia Alessandra**, _principale du collège Jacques-Yves Cousteau de Bussy-Saint-Georges_"
       - "**Chouvary Khun**, _pharmacienne_"
       - "**Hak Ngy Khun**, _pharmacien_"
-      - "**Simeng Wang**, _sociologue, chargée de recherche au CNRS et coordinatrice du réseau de recherche Migration asiatique en France_"
+      - "**Simeng Wang**, _sociologue, chargée de recherche au CNRS et coordinatrice du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
       - "**Kai Yan Ly**, _membre du réseau de recherche Migration asiatique en France_"
       - "**Emmanuel Santarromana**, _membre du réseau de recherche Migration asiatique en France_"
 
