--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -5,13 +5,13 @@ personnalities:
       - "**Bernard Delorme**, _président de la Chambre des notaires du Grand-Anjou_"
       - "**Yann Dubosc**, _maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
       - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale_"
-      - "**Emma Abreu**, _conseillère départementale de Seine-et-Marne_"
       - "**Mathieu Viskovic**, _maire de Noisiel (Seine-et-Marne)_"
       - "**Nathalie Tortrat**, _maire de Gouvernes (Seine-et-Marne) et conseillère régionale d’Ile-de-France_"
       - "**Olivier Colaisseau**, _maire de Chanteloup-en-Brie (Seine-et-Marne)_"
       - "**Michel Gérès**, _maire de Croissy-Beaubourg (Seine-et-Marne)_"
-      - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
+      - "**Emma Abreu**, _conseillère départementale de Seine-et-Marne_"
       - "**Sithal Tieng**, _premier adjoint au maire de Noisiel (Seine-et-Marne)_"
+      - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Rui Wang**, _conseiller municipal de Pantin (Seine-Saint-Denis)_"
       - "**Daniel Tran**, _conseiller d’arrondissement Paris 13e_"
 
@@ -24,12 +24,12 @@ personnalities:
 
   - section3:
     list:
-      - "**Aurélia Alessandra**, _principale du collège Jacques-Yves Cousteau de Bussy-Saint-Georges_"
+      - "**Aurélia Alessandra**, _principale du collège Jacques-Yves Cousteau de Bussy-Saint-Georges (Seine-et-Marne)_"
       - "**Chouvary Khun**, _pharmacienne_"
       - "**Hak Ngy Khun**, _pharmacien_"
       - "**Simeng Wang**, _sociologue, chargée de recherche au CNRS et coordinatrice du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
-      - "**Kai Yan Ly**, _membre du réseau de recherche Migration asiatique en France_"
-      - "**Emmanuel Santarromana**, _membre du réseau de recherche Migration asiatique en France_"
+      - "**Kai Yan Ly**, _membre du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
+      - "**Emmanuel Santarromana**, _membre du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
 
   - section3:
     list:
