--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -18,6 +18,7 @@ personnalities:
   - section2:
     list:
       - "**Valéry Vuong**, _vice-président du Conseil représentatif des associations asiatiques de France (Craaf)_"
+      - "**Visal Meas**, _président de l'Association culturelle franco-khmère de Paris (ACFK) - école khmère de Paris_  "
       - "**Thomas Cai**, _président de l’AJCF, association des jeunes Chinois de France_"
  
       
