--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -1,7 +1,7 @@
 personnalities:
   - section1:
     list:
-      - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale_"      
+      - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale_"
       - "**Yann Dubosc**, _maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
       - "**Mathieu Viskovic**, _maire de Noisiel (Seine-et-Marne)_"
       - "**Nathalie Tortrat**, _maire de Gouvernes (Seine-et-Marne) et conseillère régionale d’Ile-de-France_"
@@ -11,14 +11,14 @@ personnalities:
       - "**Sithal Tieng**, _premier adjoint au maire de Noisiel (Seine-et-Marne)_"
       - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Rui Wang**, _conseiller municipal de Pantin (Seine-Saint-Denis)_"
-      - "**Daniel Tran**, _conseiller d’arrondissement Paris 13e_"     
-      
+      - "**Daniel Tran**, _conseiller d’arrondissement Paris 13e_"
+
   - section2:
     list:
       - "**Bernard Delorme**, _président de la Chambre des notaires du Grand-Anjou_"
       - "**Valéry Vuong**, _vice-président du Conseil représentatif des associations asiatiques de France (Craaf)_"
       - "**Visal Meas**, _président de l'Association culturelle franco-khmère de Paris (ACFK) - école khmère de Paris_  "
-      - "**Sivano Srey**, _président de l'association Selepak Khmer_
+      - "**Sivano Srey**, _président de l'association Selepak Khmer_"
       - "**Thomas Cai**, _président de l’AJCF, association des jeunes Chinois de France_"
 
   - section3:
@@ -39,4 +39,3 @@ personnalities:
       - "**Catherine Ngo**, _autrice_"
       - "**Linda Nguon**, _créatrice de Banh Mi Média_"
       - "**Mike Nguyen**, _comédien_"
-      
