--- a/config.yml
+++ b/config.yml
@@ -56,7 +56,7 @@ FRAGMENTS #KH50 a pour objectif de rassembler ces fragments d’histoires pour r
   profileMode:
     # Disable to populate home page with 'mainSections' content
     enabled: true
-    title: Fragments#KH50
+    title: "Fragments #KH50"
     description:
       "Le projet Fragments #KH50 est principalement initié par des descendants de Cambodgiens et porté par l’association Loi 1901, Fragmentis Vitae Asia. 
 Du fait de l’exil, de la guerre civile et de la période génocidaire, chacun ne possède que quelques fragments de l’histoire de sa famille.\n
