--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -35,6 +35,7 @@ personnalities:
   - section4:
     list:
       - "**Jonathan Eap**, _comédien_"
+      - "**Linh-Lan Dao**, _journaliste France TV_"
       - "**Steve Tran**, _comédien_"
       - "**Nguyen Tay**, _artiste-peintre_"
       - "**Diana Chao**, _cheffe de Cuisine, créatrice de la chaîne YouTube Chez Mama Ly_"
