--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -9,6 +9,7 @@ personnalities:
       - "**Michel Gérès**, _maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Emma Abreu**, _conseillère départementale de Seine-et-Marne_"
       - "**Sithal Tieng**, _premier adjoint au maire de Noisiel (Seine-et-Marne)_"
+      - "**Nathalie Karajabarlian**, _adjointe au maire de Courtry (Seine-et-Marne)_"
       - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
       - "**Rui Wang**, _conseiller municipal de Pantin (Seine-Saint-Denis)_"
       - "**Daniel Tran**, _conseiller d’arrondissement Paris 13e_"
