--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -32,6 +32,8 @@ personnalities:
       - "**Simeng Wang**, _sociologue, chargée de recherche au CNRS et coordinatrice du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
       - "**Kai Yan Ly**, _membre du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
       - "**Emmanuel Santarromana**, _membre du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
+      - "**Lana Chhor**, _autrice, conférencière sur les thèmes de l'exil, de la transmission, des réfugiés_"
+      
 
   - section4:
     list:
