--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -19,9 +19,11 @@ personnalities:
     list:
       - "**Bernard Delorme**, _président de la Chambre des notaires du Grand-Anjou_"
       - "**Valéry Vuong**, _vice-président du Conseil représentatif des associations asiatiques de France (Craaf)_"
+      - "**Soc Lam**, _avocat, président de l'association des avocats d'origine chinoise_"
       - "**Visal Meas**, _président de l'Association culturelle franco-khmère de Paris (ACFK) - école khmère de Paris_  "
       - "**Sivano Srey**, _président de l'association Selepak Khmer_"
       - "**Thomas Cai**, _président de l’AJCF, association des jeunes Chinois de France_"
+      - "**Clément Hong**, _vice-président de l'association Maison de la francophonie - Bussy-Saint-Georges_"
 
   - section3:
     list:
