--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -40,12 +40,14 @@ personnalities:
   - section4:
     list:
       - "**Jonathan Eap**, _comédien_"
+      - "**Linda Nguon**, _créatrice de Banh Mi Média_"
+      - "**Hout Kov**, _photographe_"
       - "**Linh-Lan Dao**, _journaliste France TV_"
+      - "**Christian Mey**, _auteur_"
       - "**Steve Tran**, _comédien_"
       - "**Nguyen Tay**, _artiste-peintre_"
       - "**Diana Chao**, _cheffe de Cuisine, créatrice de la chaîne YouTube Chez Mama Ly_"
       - "**Catherine Ngo**, _autrice_"
-      - "**Linda Nguon**, _créatrice de Banh Mi Média_"
       - "**Mike Nguyen**, _comédien_"
       
       
