--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -11,8 +11,10 @@ personnalities:
       - "**Sithal Tieng**, _premier adjoint au maire de Noisiel (Seine-et-Marne)_"
       - "**Nathalie Karajabarlian**, _adjointe au maire de Courtry (Seine-et-Marne)_"
       - "**Mickaël Gaillard**, _adjoint au maire de Croissy-Beaubourg (Seine-et-Marne)_"
+      - "**Caroline Digard**, _adjointe au maire de Villeparisis (Seine-et-Marne)_"
       - "**Rui Wang**, _conseiller municipal de Pantin (Seine-Saint-Denis)_"
       - "**Daniel Tran**, _conseiller d’arrondissement Paris 13e_"
+      - "**Thi My Gosselin**, _conseillère municipale de Meaux (Seine-et-Marne), présidente de l'association Signes et paroles_"
       - "**Laurent Prugneau**, _conseiller municipal de Mitry-Mory (Seine-et-Marne)_"
 
   - section2:
