--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -51,6 +51,7 @@ personnalities:
       - "**Diana Chao**, _cheffe de Cuisine, créatrice de la chaîne YouTube Chez Mama Ly_"
       - "**Catherine Ngo**, _autrice_"
       - "**Mike Nguyen**, _comédien_"
+      - "**Jérémy Yantrak**, _artiste-tatoueur_"
       
       
       
