--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ menu:
     - name: Témoignages
       url: /temoignages/
       weight: 15
-    - name: Qui porte le projet ? 
+    - name: Qui portent le projet ? 
       url: /porteurs-projet/
       weight: 20
     - name: Soutiens
