--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -18,5 +18,5 @@
   picture: "/images/companies/ajcf.png"
 - name: Collège Cousteau
   picture: "/images/companies/college-cousteau.jpg"
-- name: Majesté Diamant
+- name: Majesté Diamants
   picture: "/images/companies/majeste-val-europe.jpg"
