--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -16,7 +16,7 @@
   picture: "/images/companies/avb.png"
 - name: Association des Jeunes chinois de France 
   picture: "/images/companies/ajcf.png"
-- name: Collège Jacques-Yves Cousteau (Bussy-Saint-Georges)
+- name: Collège Cousteau (Bussy-Saint-Georges)
   picture: "/images/companies/college-cousteau.jpg"
 - name: Majesté Diamants
   picture: "/images/companies/majeste-val-europe.jpg"
