--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -31,7 +31,7 @@ personnalities:
     list:
       - "**Frédéric Dabi**, _directeur-général de l’institut de sondage IFOP_"
       - "**Aurélia Alessandra**, _principale du collège Jacques-Yves Cousteau de Bussy-Saint-Georges (Seine-et-Marne)_"
-      - "**Vary Khun**, _pharmacienne et Vice-présidente de la Société des Membres de la Légion d'honneur de Seine-et-Marne_"
+      - "**Vary Khun**, _pharmacienne et Vice-présidente de la Société des Membres de la Légion d'honneur (SMLH) de Seine-et-Marne_"
       - "**Hak Ngy Khun**, _pharmacien_"
       - "**Simeng Wang**, _sociologue, chargée de recherche au CNRS et coordinatrice du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
       - "**Kai Yan Ly**, _membre du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
