--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -6,7 +6,7 @@
   picture: "/images/companies/gfc.png"
 - name: Ecole Khmère de Paris
   picture: "/images/companies/ekp.png"
-- name: Selepak
+- name: Selepak Khmer
   picture: "/images/companies/selepak.png"
 - name: Ballet classique khmer
   picture: "/images/companies/bck.png"
