--- a/data/founders.yaml
+++ b/data/founders.yaml
@@ -17,3 +17,6 @@ founders:
   - fullname: "Lydie Kao"
     bio: "Conseillère funéraire dans la petite entreprise familiale que son père a créée en 2005, Lydie Kao aide les futures générations à comprendre les rituels funéraires aux ancêtres à travers les  traditions qui y sont rattachées.<br>Elle sera un des acteurs liés à la création du monument."
     picture: "/images/founders/lydie_kao.jpeg"
+- fullname: "Judith Kheum-Khau"
+    bio: "Judith Kheum est née en 1976 en pleine guerre, réfugiée cambodgienne arrivée en France à l’âge de 3 ans 1/2. Elle est impliquée dans l’association pour perpétuer la mémoire collective aux jeunes générations et  « libérer une souffrance silencieuse ». Les fragments d’histoire de sa famille l’ont naturellement rapprochée de Fragmentis Vitae Asia. "
+    picture:  "https://drive.google.com/uc?id=1MR0Bg_XJLbXwF1V9OA9LkGuRIUdFsBaE"
