--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -21,3 +21,6 @@
   picture: "/images/companies/college-cousteau.jpg"
 - name: Majesté Diamants
   picture: "/images/companies/majeste-val-europe.jpg"
+- name: PF Millénaire
+  picture: "https://drive.google.com/uc?id=1jE7DBuex1avEw_ILPlPW9Da98ueE_f2U"
+  
