--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -5,6 +5,8 @@
 - name: GFC Pharma
   picture: "/images/companies/gfc.png"
   link: "https://gfc.pharminfo.fr/"
+- name: Enfants du Mékong
+  picture: "https://drive.google.com/uc?id=1WEPGzU88iHVSb2gkX-G4_BSZsWAJeeOV"
 - name: Ecole Khmère de Paris
   picture: "/images/companies/ekp.png"
 - name: Selepak Khmer
