--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -21,6 +21,8 @@
   picture: "/images/companies/ajcf.png"
 - name: Collège Cousteau (Bussy-Saint-Georges)
   picture: "/images/companies/college-cousteau.jpg"
+- name: Maison de la Francophonie (Bussy Saint-Georges)
+  picture: "https://drive.google.com/file/d/1SphG2RL69zU_2LBuBaBJ52Y8JVAN2SCF"
 - name: Majesté Diamants
   picture: "/images/companies/majeste-val-europe.jpg"
 - name: PF Millénaire
