--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -22,7 +22,7 @@
 - name: Collège Cousteau (Bussy-Saint-Georges)
   picture: "/images/companies/college-cousteau.jpg"
 - name: Maison de la Francophonie (Bussy Saint-Georges)
-  picture: "https://drive.google.com/file/d/1SphG2RL69zU_2LBuBaBJ52Y8JVAN2SCF"
+  picture: "https://drive.google.com/uc?id=1Ss535bGFgBf9aINGBcudGeSerxVyjer3"
 - name: Majesté Diamants
   picture: "/images/companies/majeste-val-europe.jpg"
 - name: PF Millénaire
