--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -7,6 +7,8 @@
   link: "https://gfc.pharminfo.fr/"
 - name: Enfants du Mékong
   picture: "https://drive.google.com/uc?id=1KiFRnUU0QWtCHfO51O2SMXyKwQ89VhKF"
+- name: Association Khmers de Bussy-Saint-Georges 
+  picture: "https://drive.google.com/uc?id=1ELo-aJcmJW9NvR82bGwu9NqhNaDPUrzd"
 - name: Ecole Khmère de Paris
   picture: "/images/companies/ekp.png"
 - name: Selepak Khmer
