--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -19,7 +19,7 @@ personnalities:
 
   - section2:
     list:
-      - "**Bernard Delorme**, _président de la Chambre des notaires du Grand-Anjou_"
+      - "**Bernard Delorme**, _ancien président de la Chambre des notaires du Grand-Anjou_"
       - "**Valéry Vuong**, _vice-président du Conseil représentatif des associations asiatiques de France (Craaf)_"
       - "**Soc Lam**, _avocat, président de l'association des avocats d'origine chinoise_"
       - "**Visal Meas**, _président de l'Association culturelle franco-khmère de Paris (ACFK) - école khmère de Paris_  "
@@ -41,7 +41,9 @@ personnalities:
 
   - section4:
     list:
+      - "**Daren Nop**, _comédien, chorégraphe-cascadeur_"
       - "**Jonathan Eap**, _comédien_"
+      - "**Léanna Chéa**, _comédienne_"
       - "**Linda Nguon**, _créatrice de Banh Mi Média_"
       - "**Hout Kov**, _photographe_"
       - "**Linh-Lan Dao**, _journaliste France TV_"
