--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -4,6 +4,7 @@ personnalities:
       - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale_"
       - "**Yann Dubosc**, _maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
       - "**Mathieu Viskovic**, _maire de Noisiel (Seine-et-Marne)_"
+      - "**André Yuste**, _maire de Lognes (Seine-et-Marne)_"
       - "**Nathalie Tortrat**, _maire de Gouvernes (Seine-et-Marne) et conseillère régionale d’Ile-de-France_"
       - "**Olivier Colaisseau**, _maire de Chanteloup-en-Brie (Seine-et-Marne)_"
       - "**Michel Gérès**, _maire de Croissy-Beaubourg (Seine-et-Marne)_"
