--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -27,6 +27,8 @@
   picture: "/images/companies/college-cousteau.jpg"
 - name: Maison de la Francophonie (Bussy Saint-Georges)
   picture: "https://drive.google.com/uc?id=1Ss535bGFgBf9aINGBcudGeSerxVyjer3"
+- name: Hotel Mercure Bussy-Saint-Georges
+  picture: "https://drive.google.com/uc?id=1SphG2RL69zU_2LBuBaBJ52Y8JVAN2SCF"
 - name: Majesté Diamants
   picture: "/images/companies/majeste-val-europe.jpg"
 - name: PF Millénaire
