--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -28,7 +28,7 @@
 - name: Maison de la Francophonie (Bussy Saint-Georges)
   picture: "https://drive.google.com/uc?id=1Ss535bGFgBf9aINGBcudGeSerxVyjer3"
 - name: Hotel Mercure Bussy-Saint-Georges
-  picture: "https://drive.google.com/uc?id=1SphG2RL69zU_2LBuBaBJ52Y8JVAN2SCF"
+  picture: "https://drive.google.com/uc?id=19wOgkA13hX5ZSEo1o8CShRNwnyZykC-A""
 - name: Majesté Diamants
   picture: "/images/companies/majeste-val-europe.jpg"
 - name: PF Millénaire
