feat: add events page

--- a/config.yml
+++ b/config.yml
@@ -23,6 +23,9 @@ menu:
     - name: Presse
       url: /espace-presse/
       weight: 50
+    - name: Events / Actus
+      url: /events-actus/
+      weight: 60
 
 # - name: Contact
 #   url: /contact/
