--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -1,4 +1,4 @@
 - name: "Pauline Au"
   description: "Rédaction de la présentation du projet"
 - name: "Loïc Chau"
-  description: "Créaton du site"
+  description: "Création du site"
