--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -2,3 +2,8 @@
   description: "Rédaction de la présentation du projet"
 - name: "Loïc Chau"
   description: "Création du site"
+- name: "Cécile Delattre"
+  description: "Conception graphique"
+- name: "Polyka Srey"
+  description: "organisation des événements"
+  
