--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -1,6 +1,7 @@
 personnalities:
   - section1:
     list:
+      - "**Vincent Eblé**, _Sénateur de Seine-et-Marne, président du Groupe d’amitié France-Cambodge-Laos au Sénat_"
       - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale_"
       - "**Yann Dubosc**, _maire de Bussy-Saint-Georges, conseiller départemental de Seine-et-Marne, président de l’établissement public d’aménagement de Marne la Vallée (EpaMarne)_"
       - "**Mathieu Viskovic**, _maire de Noisiel (Seine-et-Marne)_"
@@ -55,6 +56,7 @@ personnalities:
       - "**Catherine Ngo**, _autrice_"
       - "**Mike Nguyen**, _comédien_"
       - "**Jérémy Yantrak**, _artiste-tatoueur_"
+      - "**Alexia Chaing**, _artiste-tatoueuse_"
       
       
       
