--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -6,4 +6,8 @@
   description: "Conception graphique"
 - name: "Polyka Srey"
   description: "organisation des événements"
+- name: "Vincent Bailleul"
+  description: "réalisation des clips vidéo"
+- name: "Julie Kuoch"
+  description: "réalisation des clips vidéo"
   
