--- a/data/supports.yaml
+++ b/data/supports.yaml
@@ -1,6 +1,7 @@
 personnalities:
   - section1:
     list:
+      - "**SE David Luy**, _Ambassadeur du Cambodge en France_"
       - "**Vincent Eblé**, _Sénateur de Seine-et-Marne, président du Groupe d’amitié France-Cambodge-Laos au Sénat_"
       - "**Hadrien Ghomi**, _député de Seine-et-Marne, vice-président du Groupe d’amitié France-Cambodge à l’Assemblée nationale_"
       - "**Nathalie Tortrat**, _maire de Gouvernes (Seine-et-Marne) et conseillère régionale d’Ile-de-France_"
@@ -39,7 +40,6 @@ personnalities:
       - "**Kai Yan Ly**, _membre du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
       - "**Emmanuel Santarromana**, _membre du réseau de recherche Migration d'Asie de l'Est et du Sud-Est en France (MAF)_"
       
-      
 
   - section4:
     list:
@@ -57,6 +57,8 @@ personnalities:
       - "**Mike Nguyen**, _comédien_"
       - "**Jérémy Yantrak**, _artiste-tatoueur_"
       - "**Alexia Chaing**, _artiste-tatoueuse_"
+      - "**Ramya Chuong**, _artiste-plasticien_"
+      
       
       
       
