--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -10,4 +10,5 @@
   description: "réalisation des clips vidéo"
 - name: "Julie Kuoch"
   description: "réalisation des clips vidéo"
-  
+- name: "Jimmy Tieng "
+  description: "conseil en stratégie"  
