--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -1,5 +1,5 @@
 - name: Ville de Lognes
-  picture: "https://lh3.googleusercontent.com/drive-viewer/AKGpihaEX5lgz6t7BIOn8bVyI2WB-5cl00wwOhK_GYuOx0fdezOXEy14b68R-bhj1Y2BG6hxfg2ROPvFAC6KD-Hb79CMSH1-UWIkPso=s1600-rw-v1?source=screenshot.guru"
+  picture: "https://lh3.googleusercontent.com/drive-viewer/AKGpihaEX5lgz6t7BIOn8bVyI2WB-5cl00wwOhK_GYuOx0fdezOXEy14b68R-bhj1Y2BG6hxfg2ROPvFAC6KD-Hb79CMSH1-UWIkPso=s1600-rw-v1"
 - name: Ville de Noisiel
   picture: "/images/companies/noisiel.png" 
 - name: Ville de Bussy-Saint-Georges
