--- a/data/companies.yaml
+++ b/data/companies.yaml
@@ -26,7 +26,7 @@
 - name: Majesté Diamants
   picture: "/images/companies/majeste-val-europe.jpg"
 - name: PF Millénaire
-  picture: "https://drive.google.com/uc?id=1jE7DBuex1avEw_ILPlPW9Da98ueE_f2U"
+  picture: "https://lh3.googleusercontent.com/drive-viewer/AKGpihaEX5lgz6t7BIOn8bVyI2WB-5cl00wwOhK_GYuOx0fdezOXEy14b68R-bhj1Y2BG6hxfg2ROPvFAC6KD-Hb79CMSH1-UWIkPso=s1600-rw-v1"
 - name: OIA Galerie
   picture: "https://drive.google.com/uc?id=1HN7Wcrr_wTYHFu5LnpPNG7iGtZmGVdiv"
   
