--- a/data/founders.yaml
+++ b/data/founders.yaml
@@ -19,7 +19,7 @@ founders:
     picture: "/images/founders/lydie_kao.jpeg"
   - fullname: "Judith Kheum-Khau"
     bio: "Judith Kheum est née en 1976 en pleine guerre, réfugiée cambodgienne arrivée en France à l’âge de 3 ans 1/2. Elle est impliquée dans l’association pour perpétuer la mémoire collective aux jeunes générations et  « libérer une souffrance silencieuse ». Les fragments d’histoire de sa famille l’ont naturellement rapprochée de Fragmentis Vitae Asia."
-    picture: "https://drive.google.com/uc?id=1YssQPRoSp-MWO6FV3-EbNPZ_gkNQBSrT"
+    picture: "https://lh3.googleusercontent.com/drive-viewer/AKGpihbUcTCrYdfTDM1XtH6gU4UkZQXGiDGc4fFqK-3ezpl9_LoGaNNicVeJMgE2k4s9-N7Dzyx7SRhBzTl5HE7W2USEr5Caluw4Wpw=s1600-rw-v1"
   - fullname: "Hervé Cadet"
     bio: "Ancien fonctionnaire aux Affaires étrangères et attaché parlementaire, Hervé Cadet est investi dans la promotion artistique. Lié au Cambodge par sa belle-famille et déjà investi dans des associations défendant des valeurs universalistes, il a rejoint Fragments #KH50 pour contribuer à ce projet aux vocations mémorielles, patrimoniales et de vivre-ensemble."
     picture: "https://drive.google.com/uc?id=12P_AYRfdroLEfkDVnEFKbMy65sCb3pJo"
